# texc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: info.md  settings.md  sql.md  tags.md
docs/api/: add.md  close.md  config.md  list.md  remove.md  version.md
src/: CMakeLists.txt  args.c  args.h  expandtext.c  expandtext.h  main.c  settings.c  settings.h  subcmds.c  subcmds.h
src/texc_data/: CMakeLists.txt  data.c  data.h  data_io.c  data_io.h  data_sql.c  data_sql.h  data_sql_row.c  data_sql_row.h
src/texc_expand/: CMakeLists.txt  _keyboard_raw.h  expand.c  expand.h  keyboard.c  keyboard.h
src/texc_http/: CMakeLists.txt  client.c  client.h  server.c  server.h  server_api.c
src/texc_keyhook/: CMakeLists.txt  _keyhook_raw.h  keyhook.c  keyhook.h
src/texc_match/: CMakeLists.txt  keybuffer.c  keybuffer.h  match.c  match.h
src/texc_tags/: CMakeLists.txt  expand_tags.h  match_tags.h  tagmap.c  tagmap.h  tags.c  tags.h
src/texc_utils/: CMakeLists.txt  argparse.c  argparse.h  array.h  csv.h  filelock.h  http_request.h  http_response.h  logger.h  path.h  socket.h  str.h  thread.h  url.h  utils.c  utils.h
